Integrated caching feature + tests